// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MagicLogin /> should render correctly - index 1`] = `
<div>
  <div
    class="sc-bjfHbI gUxyYC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fnGiBr ghqBZI"
    >
      <div
        class="sc-fEXmlR hcKaJa"
      />
      <div
        class="sc-fEXmlR fMRprO"
      />
      <div
        class="sc-fEXmlR XoYlN"
      />
      <div
        class="sc-fEXmlR fKhhgo"
      />
      <div
        class="sc-fEXmlR chaStn"
      />
      <div
        class="sc-fEXmlR ivBCES"
      />
      <div
        class="sc-fEXmlR eKErEm"
      />
      <div
        class="sc-fEXmlR kiHAOG"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-bjfHbI gUxyYC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fnGiBr ghqBZI"
    >
      <div
        class="sc-fEXmlR hcKaJa"
      />
      <div
        class="sc-fEXmlR fMRprO"
      />
      <div
        class="sc-fEXmlR XoYlN"
      />
      <div
        class="sc-fEXmlR fKhhgo"
      />
      <div
        class="sc-fEXmlR chaStn"
      />
      <div
        class="sc-fEXmlR ivBCES"
      />
      <div
        class="sc-fEXmlR eKErEm"
      />
      <div
        class="sc-fEXmlR kiHAOG"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with logInError 1`] = `
<div>
  <div
    class="sc-bjfHbI gUxyYC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fnGiBr ghqBZI"
    >
      <div
        class="sc-fEXmlR hcKaJa"
      />
      <div
        class="sc-fEXmlR fMRprO"
      />
      <div
        class="sc-fEXmlR XoYlN"
      />
      <div
        class="sc-fEXmlR fKhhgo"
      />
      <div
        class="sc-fEXmlR chaStn"
      />
      <div
        class="sc-fEXmlR ivBCES"
      />
      <div
        class="sc-fEXmlR eKErEm"
      />
      <div
        class="sc-fEXmlR kiHAOG"
      />
    </div>
    <span
      class="sc-ksBlkl bLCpBX"
    >
      <span
        class="sc-hBxehG cqQowO"
      >
        Something went wrong logging you in
        <br />
        Invalid session
        <br />
        <a
          class="sc-iBYQkv jNlLug"
          href="/login"
        >
          Try logging in again
        </a>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with loggingIn=true 1`] = `
<div>
  <div
    class="sc-bjfHbI gUxyYC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logging in
      </h1>
    </div>
    <div
      class="sc-fnGiBr ghqBZI"
    >
      <div
        class="sc-fEXmlR hcKaJa"
      />
      <div
        class="sc-fEXmlR fMRprO"
      />
      <div
        class="sc-fEXmlR XoYlN"
      />
      <div
        class="sc-fEXmlR fKhhgo"
      />
      <div
        class="sc-fEXmlR chaStn"
      />
      <div
        class="sc-fEXmlR ivBCES"
      />
      <div
        class="sc-fEXmlR eKErEm"
      />
      <div
        class="sc-fEXmlR kiHAOG"
      />
    </div>
  </div>
</div>
`;

exports[`<MagicLogin /> should render correctly with user 1`] = `
<div>
  <div
    class="sc-bjfHbI gUxyYC page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-bqWxrE VcTDu"
    >
      <h1
        class="sc-bcXHqe bHgOFy sc-jrcTuL ewlzmZ"
      >
        Logged in
      </h1>
    </div>
    <span
      class="sc-ksBlkl bLCpBX"
    >
      Logged in!
      <br />
      You will now be redirected to the 
      account
       page
      <br />
      <a
        class="sc-iBYQkv jNlLug"
        href="account"
      >
        Not been redirected? Click here
      </a>
    </span>
    <div
      class="sc-fnGiBr ghqBZI"
    >
      <div
        class="sc-fEXmlR hcKaJa"
      />
      <div
        class="sc-fEXmlR fMRprO"
      />
      <div
        class="sc-fEXmlR XoYlN"
      />
      <div
        class="sc-fEXmlR fKhhgo"
      />
      <div
        class="sc-fEXmlR chaStn"
      />
      <div
        class="sc-fEXmlR ivBCES"
      />
      <div
        class="sc-fEXmlR eKErEm"
      />
      <div
        class="sc-fEXmlR kiHAOG"
      />
    </div>
  </div>
</div>
`;
